<resources>
    <string name="app_name">Lab 2</string>
    <string name="input">Input</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="black">Black</string>

    <string name="invalid_input_title">Invalid input data</string>
    <string name="please_select_color">Please select a color.</string>
    <string name="please_input_text">Please provide some text.</string>
</resources>
